# spectralchain

./: AI_HANDOVER_MASTER_PROMPT.md  AI_HANDOVER_SYSTEM_SUMMARY.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  INNOVATION_SPRINT_PLAN.md  LICENSE  MODULE_ANALYSIS_FRAMEWORK.md  Makefile.docs  NETWORK_TRANSPORT_PLAN.md  NO_DEAD_ENDS_POLICY.md  PHASE0_COMPLETION_SUMMARY.md  PHASE1_CRITICAL_SAFETY_FIXES.md  PHASE3_README.md  PHASE3_SUMMARY.md  PHASE_2_COMPLETION.md  PHASE_3_COMPLETION.md  PROPERTY_BASED_TESTING_GUIDE.md  QUANTUM_RESONANT_ARCHITECTURE.md  README.md  REFACTORING_MASTER_PLAN.md  REFACTORING_TASKS_TABLE.md  RELEASE_CHECKLIST_1.0.md  RELEASE_MANAGEMENT_SUMMARY.md  SELF_HEALING_GUIDE.md  SYSTEM_HEALTH_ANALYSIS.md  ai_handover_schema.json  refactoring-tasks.json  system-health.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_ghost_packet.rs  fuzz_quantum_masking.rs  fuzz_routing.rs  fuzz_steganography.rs  fuzz_zk_proof.rs
mef-common/: Cargo.toml  README.md
mef-common/src/: concurrency.rs  error.rs  lib.rs  resilience.rs  result_ext.rs  time.rs  types.rs
mef-common/src/proptest_support/: generators.rs  invariants.rs  mod.rs  strategies.rs
mef-ephemeral-services/: Cargo.toml
mef-ephemeral-services/src/: audit_trail.rs  bubble.rs  lib.rs  lifecycle.rs  service_registry.rs
mef-fork-healing/: Cargo.toml
mef-fork-healing/src/: attractor.rs  lib.rs  multiversum.rs
mef-ghost-network/: Cargo.toml
mef-ghost-network/benches/: ghost_protocol_bench.rs
mef-ghost-network/src/: broadcasting.rs  discovery.rs  integration.rs  lib.rs  packet.rs  protocol.rs
mef-ghost-network/src/transport/: codec.rs  config.rs  libp2p_transport.rs  mod.rs  peer.rs
mef-ghost-network/tests/: integration_e2e.rs  integration_multi_node.rs
mef-quantum-ops/: Cargo.toml
mef-quantum-ops/src/: error.rs  lib.rs  masking.rs  resonance.rs  steganography.rs  zk_proofs.rs
mef-quantum-ops/tests/: property_tests.rs  property_tests.rs.disabled
mef-quantum-routing/: Cargo.toml
mef-quantum-routing/src/: entropy_source.rs  lib.rs  random_walk.rs  topology.rs
quantumhybrid_operatoren_core/: Cargo.toml  README.md
quantumhybrid_operatoren_core/docs/: ARCHITECTURE.md
quantumhybrid_operatoren_core/examples/: basic_usage.rs  quantum_state_demo.rs
quantumhybrid_operatoren_core/src/: lib.rs
quantumhybrid_operatoren_core/src/core/: mod.rs  traits.rs
quantumhybrid_operatoren_core/src/operators/: doublekick.rs  masking.rs  mod.rs  pfadinvarianz.rs  quantum_state.rs  resonance.rs  sweep.rs  weight_transfer.rs
resources_dev/infinityledger/: .gitignore  ADVANCED_MODULES_MIGRATION_SUMMARY.md  ARCHITECTURE_EXTENSION.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.bench.yml  docker-compose.rust.yml  openapi.yaml
resources_dev/infinityledger/.github/workflows/: rust-ci.yml
resources_dev/infinityledger/config/: extension.yaml  optimization.yaml  production.env
resources_dev/infinityledger/deploy/: deploy.sh
resources_dev/infinityledger/load-tests/: api-load-test.js
resources_dev/infinityledger/mef-acquisition/: Cargo.toml
resources_dev/infinityledger/mef-acquisition/src/: adapters.rs  lib.rs
resources_dev/infinityledger/mef-api/: Cargo.toml
resources_dev/infinityledger/mef-api/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
resources_dev/infinityledger/mef-api/tests/: integration_api.rs
resources_dev/infinityledger/mef-audit/: Cargo.toml
resources_dev/infinityledger/mef-audit/src/: lib.rs  logger.rs
resources_dev/infinityledger/mef-bench/: Cargo.toml  README.md
resources_dev/infinityledger/mef-bench/src/: base.rs  bench_runner.rs  datasets.rs  elastic_driver.rs  faiss_baseline.rs  lib.rs  mef_driver.rs  milvus_driver.rs  pinecone_driver.rs  qdrant_driver.rs  weaviate_driver.rs
resources_dev/infinityledger/mef-benchmarks/: Cargo.toml
resources_dev/infinityledger/mef-benchmarks/benches/: optimization_bench.rs  performance_baseline.rs
resources_dev/infinityledger/mef-benchmarks/src/: lib.rs
resources_dev/infinityledger/mef-cli/: Cargo.toml
resources_dev/infinityledger/mef-cli/src/: config.rs  lib.rs  main.rs
resources_dev/infinityledger/mef-core/: Cargo.toml
resources_dev/infinityledger/mef-core/examples/: advanced_modules_demo.rs  cube_demo.rs  verify.rs
resources_dev/infinityledger/mef-core/src/: cube.rs  field_vector.rs  gabriel_cell.rs  geometry.rs  graph.rs  lib.rs  mandorla.rs  mef_pipeline.rs  qdash_agent.rs  qlogic.rs  quantum.rs  resonance_tensor.rs  spiral_memory.rs  symmetries.rs
resources_dev/infinityledger/mef-core/tests/: integration_core.rs
resources_dev/infinityledger/mef-coupling/: Cargo.toml
resources_dev/infinityledger/mef-coupling/src/: lib.rs  spiral_coupling.rs
resources_dev/infinityledger/mef-domains/: Cargo.toml
resources_dev/infinityledger/mef-domains/src/: adapter.rs  domain_layer.rs  infogenome.rs  lib.rs  meshholo.rs  resonat.rs  resonit.rs  xswap.rs
resources_dev/infinityledger/mef-hdag/: Cargo.toml
resources_dev/infinityledger/mef-hdag/src/: graph.rs  lib.rs
resources_dev/infinityledger/mef-ingestion/: Cargo.toml
resources_dev/infinityledger/mef-ingestion/src/: lib.rs  triton_core.rs
resources_dev/infinityledger/mef-knowledge/: Cargo.toml
resources_dev/infinityledger/mef-knowledge/src/: canonical.rs  config.rs  content_address.rs  derivation.rs  inference.rs  lib.rs  (+5 more)
resources_dev/infinityledger/mef-ledger/: Cargo.toml
resources_dev/infinityledger/mef-memory/: Cargo.toml  OPTIMIZATION_README.md
resources_dev/infinityledger/mef-router/: Cargo.toml
resources_dev/infinityledger/mef-schemas/: Cargo.toml
resources_dev/infinityledger/mef-solvecoagula/: Cargo.toml
resources_dev/infinityledger/mef-specs/: Cargo.toml
resources_dev/infinityledger/mef-spiral/: Cargo.toml
resources_dev/infinityledger/mef-storage/: Cargo.toml
resources_dev/infinityledger/mef-tic/: Cargo.toml
resources_dev/infinityledger/mef-topology/: Cargo.toml
resources_dev/infinityledger/mef-vector-db/: Cargo.toml
resources_dev/infinityledger/tests/: integration_test.rs
(+151 files in other folders)
