[workspace]
resolver = "2"
members = [
    # Shared utilities
    "mef-common",

    # NEW: Quantum Resonant Extensions (ADD-ONLY)
    "mef-quantum-ops",
    "mef-ghost-network",
    "mef-quantum-routing",
    "mef-ephemeral-services",
    "mef-fork-healing",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["Quantum Resonant Blockchain Project"]
license = "MIT"
repository = "https://github.com/LashSesh/spectralchain"

[workspace.dependencies]
# Core dependencies (matching Infinity Ledger)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ndarray = "0.15"
nalgebra = "0.33"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
proptest = "1.4"
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# NEW: Quantum & Crypto dependencies
halo2_proofs = "0.3"
blake3 = "1.5"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
zeroize = { version = "1.7", features = ["derive"] }

# NEW: Networking dependencies
libp2p = { version = "0.53", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "kad"] }
quinn = "0.11"  # QUIC protocol
async-trait = "0.1"
hex = "0.4"
bincode = "1.3"

# NEW: Steganography
steganography = "1.0"
image = "0.25"

# Shared utilities
mef-common = { path = "mef-common" }

# Infinity Ledger modules (as path dependencies)
mef-core = { path = "resources_dev/infinityledger/mef-core" }
mef-ledger = { path = "resources_dev/infinityledger/mef-ledger" }
mef-spiral = { path = "resources_dev/infinityledger/mef-spiral" }
mef-hdag = { path = "resources_dev/infinityledger/mef-hdag" }
mef-tic = { path = "resources_dev/infinityledger/mef-tic" }
mef-topology = { path = "resources_dev/infinityledger/mef-topology" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
