[package]
name = "mef-common"
version = "0.1.0"
edition = "2021"
authors = ["SpectralChain Team"]
description = "Shared utilities and common patterns for MEF system"
license = "MIT"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot = "0.12"
hex = "0.4"

[dev-dependencies]
proptest.workspace = true
tokio-test = "0.4"
