[package]
name = "mef-ephemeral-services"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true

mef-quantum-ops = { path = "../mef-quantum-ops" }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
