[package]
name = "mef-ghost-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
blake3.workspace = true
rand.workspace = true
sha2.workspace = true
uuid.workspace = true
zeroize.workspace = true
tracing.workspace = true

# Quantum ops
mef-quantum-ops = { path = "../mef-quantum-ops" }

# Networking
libp2p.workspace = true
async-trait.workspace = true
hex.workspace = true
bincode.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
