[package]
name = "mef-quantum-ops"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
ndarray.workspace = true
nalgebra.workspace = true
rand.workspace = true
rand_distr.workspace = true
sha2.workspace = true
anyhow.workspace = true
thiserror.workspace = true
zeroize.workspace = true

# Crypto
blake3.workspace = true
chacha20poly1305.workspace = true
halo2_proofs.workspace = true

# Steganography
steganography.workspace = true
image.workspace = true

# Testing
proptest = "1.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = "0.5"
