[package]
name = "mef-quantum-routing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rand.workspace = true
blake3.workspace = true

mef-quantum-ops = { path = "../mef-quantum-ops" }

[dev-dependencies]
proptest.workspace = true
