[package]
name = "quantumhybrid_operatoren_core"
version = "0.1.0"
edition = "2021"
authors = ["SpectralChain Team"]
description = "Quantum-Resonant Operators Core Library - Modular framework for quantum-hybrid operations"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LashSesh/spectralchain"
keywords = ["quantum", "resonance", "operators", "blockchain", "cryptography"]
categories = ["cryptography", "mathematics", "algorithms"]

[lib]
name = "quantumhybrid_operatoren_core"
path = "src/lib.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
zeroize = { version = "1.7", features = ["derive"] }

# Linear algebra
ndarray = { version = "0.15", features = ["serde"] }
num-complex = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
proptest = "1.4"
criterion = "0.5"

[features]
default = ["std"]
std = []
no_std = []

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "quantum_state_demo"
path = "examples/quantum_state_demo.rs"
