[workspace]
resolver = "2"
members = [
    "mef-core",
    "mef-spiral",
    "mef-ledger",
    "mef-hdag",
    "mef-ingestion",
    "mef-solvecoagula",
    "mef-tic",
    "mef-coupling",
    "mef-audit",
    "mef-topology",
    "mef-api",
    "mef-cli",
    "mef-storage",
    "mef-domains",
    "mef-vector-db", "mef-acquisition", "mef-specs", "mef-bench", "mef-benchmarks",
    "mef-schemas",
    "mef-knowledge",
    "mef-memory",
    "mef-router",
]

[package]
name = "infinityledger-r"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mef-knowledge = { path = "mef-knowledge" }
mef-schemas = { path = "mef-schemas" }

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["MEF-Core Project"]
license = "MIT"
repository = "https://github.com/LashSesh/infinityledger"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Numerics
ndarray = "0.15"
nalgebra = "0.33"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Cryptography
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Networking
reqwest = { version = "0.11", features = ["json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# gRPC
tonic = "0.11"
prost = "0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.0"
tempfile = "3.8"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
