[package]
name = "mef-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Metrics
prometheus = "0.13"

# Crypto
sha2 = "0.10"
uuid = { version = "1.6", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Path utilities
dirs = "5.0"

# Numeric
ndarray = "0.15"

# MEF crates
mef-spiral = { path = "../mef-spiral" }
mef-ledger = { path = "../mef-ledger" }
mef-hdag = { path = "../mef-hdag" }
mef-ingestion = { path = "../mef-ingestion" }
mef-solvecoagula = { path = "../mef-solvecoagula" }
mef-tic = { path = "../mef-tic" }
mef-coupling = { path = "../mef-coupling" }
mef-audit = { path = "../mef-audit" }
mef-storage = { path = "../mef-storage" }
mef-vector-db = { path = "../mef-vector-db" }
mef-core = { path = "../mef-core" }
mef-topology = { path = "../mef-topology" }
mef-domains = { path = "../mef-domains" }
mef-knowledge = { path = "../mef-knowledge" }
mef-schemas = { path = "../mef-schemas" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
