[package]
name = "mef-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mef-spiral = { path = "../mef-spiral" }
mef-ledger = { path = "../mef-ledger" }
mef-core = { path = "../mef-core" }
mef-memory = { path = "../mef-memory" }
mef-schemas = { path = "../mef-schemas" }
serde_json = { workspace = true }
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance_baseline"
harness = false

[[bench]]
name = "optimization_bench"
harness = false

[features]
default = ["optimization"]
optimization = ["mef-memory/optimization"]
