[package]
name = "mef-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "mef"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
tokio = { version = "1.42", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
dirs = "5.0"

# MEF workspace dependencies
mef-spiral = { path = "../mef-spiral" }
mef-solvecoagula = { path = "../mef-solvecoagula" }
mef-tic = { path = "../mef-tic" }
mef-ledger = { path = "../mef-ledger" }
mef-hdag = { path = "../mef-hdag" }
mef-ingestion = { path = "../mef-ingestion" }
mef-storage = { path = "../mef-storage" }
