[package]
name = "mef-coupling"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
uuid = { version = "1.0", features = ["v5"] }
chrono = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"
