[package]
name = "mef-domains"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Internal crates
mef-core = { path = "../mef-core" }
mef-topology = { path = "../mef-topology" }
mef-hdag = { path = "../mef-hdag" }
mef-ledger = { path = "../mef-ledger" }
mef-tic = { path = "../mef-tic" }

# Additional dependencies for domain layer
petgraph = "0.6"
nalgebra = "0.33"
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.0"
