[package]
name = "mef-knowledge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
mef-schemas = { path = "../mef-schemas" }
mef-memory = { path = "../mef-memory" }
mef-router = { path = "../mef-router" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
hmac = "0.12"
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

