[package]
name = "mef-solvecoagula"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
rand.workspace = true
rand_distr.workspace = true

# Numerical computing
ndarray = "0.15"
