[package]
name = "mef-spiral"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rustfft = "6.2"
num-complex = "0.4"
nalgebra = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3.8"
