[package]
name = "mef-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# AWS SDK for S3
aws-config = "1.1"
aws-sdk-s3 = "1.11"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Hashing
sha2 = { workspace = true }

# Date/time
chrono = { workspace = true }

# Directory traversal
walkdir = "2.4"

[dev-dependencies]
tokio-test = "0.4"
