[package]
name = "mef-vector-db"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
thiserror = "1.0"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
tokio = { version = "1.0", features = ["full"] }
ndarray = "0.15"
rand = "0.8"
rand_distr = "0.4"
log = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
